fix go to section mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -180,8 +180,9 @@
   body {
     @apply bg-background text-foreground;
   }
-  section[id] {
-    @apply md:scroll-margin-top-0;
-    scroll-margin-top: 5rem;
+  @media (max-width: 767px) {
+    section[id] {
+      scroll-margin-top: 5rem;
+    }
   }
 }
